--- a/src/main/webapp/css/twitternav.css
+++ b/src/main/webapp/css/twitternav.css
@@ -7,7 +7,9 @@ html,body {
 }
 
 body {
+	/*
 	padding-top: 40px;
+	*/
 	/* 40px to make the container go all the way to the bottom of the topbar */
 }
 
@@ -53,6 +55,12 @@ body {
 	border-left: 1px solid #eee;
 }
 
+.navbar {
+margin-bottom: 0px;
+}
+
+/*
 .topbar .btn {
 	border: 0;
 }
+*/
